# iubh-thesis

./: README.md
bender/bend/: Cargo.toml
bender/bend/.cargo/: config.toml
bender/bend/j4rs/: Cargo.toml
bender/bend/j4rs/src/: lib.rs
bender/bend/jni/: Cargo.toml
bender/bend/jni/src/: callback.rs  empty.rs  hello.rs  lib.rs  mandelbrot.rs  person.rs
bender/bend/raw/: Cargo.toml
bender/bend/raw/src/: callback.rs  empty.rs  hello.rs  lib.rs  mandelbrot.rs  person.rs
bender/bend/safer_ffi/: Cargo.toml
bender/bend/safer_ffi/src/: lib.rs
bender/bend/src/: hello.rs  lib.rs  mandelbrot.rs  mandelbrot_manual.rs  person.rs
bender/bend/uniffi/: Cargo.toml  build.rs  uniffi.toml
bender/bend/uniffi/src/: bend.udl  callback.rs  hello.rs  lib.rs  mandelbrot.rs  person.rs
drinkup/: .gitignore  Cargo.toml  rust-toolchain
drinkup/.github/workflows/: ci.yml
drinkup/android/: .gitignore  build.gradle.kts  settings.gradle.kts
drinkup/android/app/: build.gradle.kts  proguard-rules.pro
drinkup/android/app/src/androidTest/java/com/github/dnaka91/drinkup/: DrinkupServiceTest.kt  HiltTestRunner.kt
drinkup/android/app/src/androidTestKotlin/java/com/github/dnaka91/drinkup/: DrinkupServiceFactory.kt
drinkup/android/app/src/androidTestRust/java/com/github/dnaka91/drinkup/: DrinkupServiceFactory.kt
drinkup/android/app/src/kotlin/java/com/github/dnaka91/drinkup/: DrinkupModule.kt
drinkup/android/app/src/kotlin/res/drawable-v24/: ic_launcher_foreground.xml
drinkup/android/app/src/kotlin/res/values/: strings.xml
drinkup/android/app/src/main/: AndroidManifest.xml
drinkup/android/app/src/main/java/com/github/dnaka91/drinkup/: ConfirmIntakeFragment.kt  DrinkupApplication.kt  MainActivity.kt  MainFragment.kt  MainViewModel.kt
drinkup/android/app/src/main/java/com/github/dnaka91/drinkup/alarm/: AlarmReceiver.kt  DrinkAlarmActivity.kt  DrinkAlarmFragment.kt  DrinkAlarmViewModel.kt  SchedulingBootReceiver.kt
drinkup/android/app/src/main/java/com/github/dnaka91/drinkup/extensions/: Context.kt
drinkup/android/app/src/main/java/com/github/dnaka91/drinkup/history/: HistoryFragment.kt  HistoryViewModel.kt  RecordAdapter.kt
drinkup/android/app/src/main/java/com/github/dnaka91/drinkup/schedule/: ScheduleFragment.kt  ScheduleViewModel.kt
drinkup/android/app/src/main/java/com/github/dnaka91/drinkup/sizes/: EditIntakeSizeFragment.kt  EditIntakeSizeViewModel.kt  IntakeSizeAdapter.kt  IntakeSizeFragment.kt  IntakeSizeViewModel.kt
drinkup/android/app/src/main/res/drawable/: ic_round_add_24.xml  ic_round_check_24.xml  ic_round_filter_alt_24.xml  ic_round_flag_24.xml  ic_round_local_drink_24.xml  ic_round_local_drink_96.xml  ic_round_play_arrow_24.xml  ic_round_schedule_24.xml  ic_round_stop_24.xml  progress.xml
drinkup/android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
drinkup/android/app/src/main/res/layout/: drink_alarm_activity.xml  drink_alarm_fragment.xml  edit_intake_size_fragment.xml  history_fragment.xml  history_item.xml  intake_size_fragment.xml  intake_size_item.xml  main_activity.xml  main_fragment.xml  schedule_fragment.xml  string_list_item.xml
drinkup/android/app/src/main/res/menu/: edit_menu.xml  list_edit_menu.xml  main_menu.xml
drinkup/android/app/src/main/res/navigation/: nav_graph.xml
drinkup/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
drinkup/android/app/src/main/res/values-night/: themes.xml
drinkup/android/app/src/rust/java/com/github/dnaka91/drinkup/: DrinkupModule.kt
drinkup/android/app/src/rust/res/drawable-v24/: ic_launcher_foreground.xml
drinkup/android/app/src/rust/res/values/: strings.xml
drinkup/android/buildSrc/src/main/java/: Android.kt  Libs.kt  Plugins.kt  Projects.kt  Versions.kt
drinkup/android/drinkup-core/: build.gradle.kts
drinkup/android/drinkup-core/src/main/: AndroidManifest.xml
drinkup/android/drinkup-core/src/main/java/com/github/dnaka91/drinkup/core/: DrinkupService.kt  IntakeSize.kt  Record.kt  Schedule.kt
drinkup/android/drinkup-kt/: build.gradle.kts
drinkup/android/drinkup-kt/schemas/com.github.dnaka91.drinkup.kt.AppDatabase/: 1.json
drinkup/android/drinkup-kt/src/main/: AndroidManifest.xml
drinkup/android/drinkup-kt/src/main/java/com/github/dnaka91/drinkup/kt/: AppDatabase.kt  Converters.kt  Drinkup.kt  (+1 more)
drinkup/android/drinkup-rs/: build.gradle.kts
drinkup/android/drinkup-rs/src/main/: AndroidManifest.xml
drinkup/java/: Cargo.toml
drinkup/java/src/: lib.rs
drinkup/migrations/2020-11-28-131318_history/: up.sql
drinkup/migrations/2020-11-29-034100_intake_sizes/: down.sql  up.sql
drinkup/src/: errors.rs  history.rs  intake_size.rs  lib.rs  models.rs  schedule.rs
drinkup/tui/: Cargo.toml
drinkup/tui/src/: main.rs
drinkup/tui/src/dialogs/: confirm.rs  intake_size.rs  mod.rs  schedule.rs
drinkup/tui/src/widgets/: goal_progress.rs  mod.rs
(+145 files in other folders)
