[package]
name = "drinkup"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde", "std"] }
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
toml = "0.5.9"

[workspace]
members = ["java", "tui"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dev-dependencies]
tempfile = "3.3.0"
