[package]
name = "bend"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
num-complex = "0.4.0"
num-iter = "0.1.42"
num-traits = "0.2.14"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = ["j4rs", "jni", "raw", "safer_ffi", "uniffi"]
