[package]
name = "drinkup-java"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.11.0"
anyhow = "1.0.57"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde", "std"] }
drinkup = { path = "../" }
jni = "0.19.0"
log = { version = "0.4.17", features = ["release_max_level_info"] }
serde_json = "1.0.81"
