[package]
name = "drinkup-tui"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.57"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
crossterm = "0.23.2"
directories-next = "2.0.0"
drinkup = { path = "../" }
tui = { version = "0.18.0", default-features = false, features = ["crossterm"] }
