[package]
name = "bend_safer_ffi"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = { version = "0.10.1", default-features = false }
bend = { path = "../" }
log = { version = "0.4.14", features = ["release_max_level_info"] }
safer-ffi = { version = "0.0.5", features = ["proc_macros"] }
